@@ -54,6 +54,7 @@ Wolfpack 12.9.13 Beta (CVS)
   - Added "Refresh Characters Maximum Values" setting. Setting this to "false" will disable the automatic 
     recalculation of Maxhitpoints/Maxmana/Maxstamina.
   - Added a warning in the console if translation file could not be found.
+  - Fixed monsters not attacking players pets.
  * Definition Changes:
   - Added the mage AI to most creatures.
   - Adjusted carving sheeps.
